# hairy-crabs

./: .gitignore  Cargo.toml  README.md  config.toml  crab.yml  hairy-crabs.sqlite
crab-admin/: Cargo.toml
crab-admin/src/: auth.rs  config.rs  dict_data.rs  dict_type.rs  gen_config_template.rs  gen_table.rs  gen_table_column.rs  lib.rs  login_log.rs  main.rs  menu.rs  middleware.rs  oper_log.rs  result.rs  role.rs  tool_gen.rs  user.rs  user_role.rs
crab-admin/src/middleware/: log.rs  mod.rs  token.rs
crab-cache/: Cargo.toml
crab-cache/src/: config_cache.rs  config_util.rs  lib.rs  redis_cache.rs
crab-common/: Cargo.toml
crab-common/src/: error.rs  jwt.rs  lib.rs  result.rs
crab-common/src/cache/: mod.rs  redis_cache.rs
crab-common/src/consts/: config.rs  gen_const.rs  http_status_const.rs  mod.rs  use_const.rs
crab-common/src/enums/: mod.rs
crab-common/src/error/: mod.rs
crab-common/src/utils/: mod.rs
crab-common/src/utils/file/: file_type.rs  mime_type.rs
crab-common/src/utils/html/: escape.rs
crab-config/: Cargo.toml
crab-config/src/: lib.rs
crab-excel/: Cargo.toml  README.md
crab-excel-derive/: Cargo.toml
crab-excel-derive/src/: excel_col.rs  lib.rs  test.rs
crab-excel/src/: err.rs  lib.rs  reader.rs  test.rs  writer.rs
crab-excel/tests/: excel_writer.rs  test.rs
crab-lib/: Cargo.toml
crab-lib/src/: lib.rs
crab-model/: Cargo.toml
crab-model/src/: gen_config_template.rs  gen_table.rs  gen_table_column.rs  lib.rs  sys_config.rs  sys_dict_data.rs  sys_dict_type.rs  sys_log.rs  sys_login_log.rs  sys_menu.rs  sys_role.rs  sys_user.rs  sys_user_role.rs
crab-model/src/dto/: gen.rs  menu_dto.rs  mod.rs
crab-model/src/mapper/: gen_table.rs  mod.rs  sys_menu.rs  sys_user.rs
crab-service/: Cargo.toml
crab-service/src/: config.rs  dict.rs  gen.rs  lib.rs  log.rs  menu.rs  role.rs  sys_auth.rs  tool_gen.rs  user.rs
crab-system/: Cargo.toml
crab-system/src/: lib.rs
crab-system/src/common/: mod.rs
crab-system/src/common/cache/: mod.rs  redis_cache.rs
crab-system/src/common/consts/: gen_const.rs  mod.rs  schedule_const.rs  use_const.rs
crab-system/src/common/error/: mod.rs
crab-system/src/common/utils/: mod.rs
crab-system/src/common/utils/file/: file_type.rs
crab-system/src/common/utils/html/: escape.rs
crab-system/src/config/: mod.rs
crab-system/src/dto/: menu_dto.rs  mod.rs
crab-system/src/i18n/: mod.rs
crab-system/src/mapper/: gen_table.rs  mod.rs  sys_menu.rs  sys_user.rs
crab-system/src/model/: gen_config_template.rs  gen_table.rs  gen_table_column.rs  mod.rs  sys_config.rs  sys_notice.rs
crab-system/src/service/: mod.rs  sys_auth.rs  tool_gen.rs
crab-system/src/util/: mod.rs  password_encoder.rs
crab-system/src/util/cache/: config_util.rs  mod.rs
crab-ui/: Cargo.toml  package.json
crab-ui/src/: lib.rs
crab-ui/src/views/account/settings/: BaseSetting.vue
crab-ui/src/views/dashboard/portal/: ToDo.vue
crab-util/: Cargo.toml
crab-util/src/: lib.rs  password_encoder.rs
crab-util/src/file/: mod.rs
generator/: Cargo.toml  README.md
generator/src/: convert.rs  lib.rs  main.rs  mysql.rs  sqlite.rs  table.rs  template.rs
resources/sql/: hairy-crabs.mysql.sql  hairy-crabs.sqlite.sql
sql/: init.sql
templates/: index.html
ui/: vue.config.js
ui/src/api/: login.js
ui/src/components/pt/selectUser/: SelectUser.vue
ui/src/views/account/settings/: BaseSetting.vue
ui/src/views/dashboard/portal/: About.vue
ui/src/views/system/dict/modules/: DictTypeAddForm.vue
ui/src/views/system/post/: PostIndex.vue
ui/src/views/user/: Login.vue
