[package]
name = "crab-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
crab-system = { path = "../crab-system" }

poem = "1.2.4"
# poem-openapi = { version = "1.0.37", features = ["swagger-ui", "rapidoc"] }

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"

# 异步运行时
tokio = "1.14.0"

# 错误传递
anyhow = "1.0.51"


# lazy_static = "1.4.0"
