[package]
name = "crab-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
crab-system = { path = "../crab-system" }
crab-common = { path = "../crab-common" }
crab-model = { path = "../crab-model" }
crab-lib = {path = "../crab-lib"}

poem = "1.2.4"
# poem-openapi = { version = "1.0.37", features = ["swagger-ui", "rapidoc"] }

serde = { version = "1.0.130", features = ["derive"] }

# 异步运行时
# tokio = "1.14.0"

