[package]
name = "crab-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
crab-config = { path = "../crab-config" }
crab-common = { path = "../crab-common" }
crab-model = { path = "../crab-model" }
crab-lib = { path = "../crab-lib" }
crab-service = { path = "../crab-service" }
crab-ui = { path = "../crab-ui" }

tokio = "1.14.0"

async-trait = "0.1.53"

poem = "1.3.30"
# poem-openapi = { version = "1.0.37", features = ["swagger-ui", "rapidoc"] }

serde = { version = "1.0.136", features = ["derive"] }

log = "0.4.16"
tracing-subscriber = "0.3.11"
