[package]
name = "crab-excel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crab-excel-derive = { path = "../crab-excel-derive" }

# 读Excel
calamine = "0.18.0"
# 写Excel，有格式
xlsxwriter = "0.3.5"
# 写Excel
simple_excel_writer = "0.1.9"

thiserror = "1.0.30"
