[package]
name = "crab-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.30"

async-trait = "0.1.53"

# 序列化
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
# serde_yaml = "0.8.23"
toml = "0.5.8"

# 异步运行时
tokio = "1.14.0"

lazy_static = "1.4.0"
async_static = "0.1.3"

# 日志处理
log = { version = "0.4.14", features = ["std", "serde"] }

# 错误处理
anyhow = "1.0.51"
# 定义错误
thiserror = "1.0.30"

# Resis驱动
# redis = { version = "0.21.4", features = ["tokio-comp"] }
simple_redis = "0.6.1"

# JWT
jsonwebtoken = "8.1.0"

# struct 字段校验
validator = { version = "0.14.0", features = ["derive"] }

rbatis = { version = "3.1.1", default-features = false, features = [] }

[dev-dependencies]
tokio-test = "0.4.2"
