[package]
name = "crab-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 序列化
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8.23"

# # 异步运行时
# tokio = "1.14.0"

lazy_static = "1.4.0"

# DB相关
rbatis = { version = "3.0.27", default-features = false, features = [
    "mysql",
    "runtime-tokio-rustls",
    "debug_mode",
] }
rbson = "2.0.3"
# rbatis日志
fast_log = "1.4.4"

# 日志处理
log = { version = "0.4.14", features = ["std", "serde"] }

# 错误处理
anyhow = "1.0.51"
# 定义错误
thiserror = "1.0.30"

# Resis驱动
redis = { version = "0.21.4", features = ["tokio-comp"] }

# JWT
jsonwebtoken = { version = "7.2.0" }

# struct 字段校验
validator = { version = "0.14.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.2"
