[package]
name = "generator"
version = "0.1.0"
authors = ["pujq <2190975784@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }

rbatis = { version = "3.0.27", default-features = false, features = [
    "mysql",
    "runtime-tokio-rustls",
] }
rbson = "2.0.3"
log = "0.4.14"
fast_log = "1.3.32"

tokio = { version = "1.13.0", features = ["full"] }

anyhow = "1.0.37"

lazy_static = "1.4.0"

tera = "1.6.1"

heck = "0.3.2"

clap = { version = "3.0.0-rc.3", features = ["derive"] }
