[package]
name = "generator"
version = "0.2.0"
authors = ["pujq <2190975784@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }

rbatis = { version = "3.1.6", default-features = false, features = [
    "mysql",
    "sqlite",
    "runtime-tokio-rustls",
] }
rbson = "2.0.3"
log = "0.4.16"

tokio = { version = "1.17.0", features = ["full"] }

lazy_static = "1.4.0"

tera = "1.15.0"

heck = "0.4.0"

clap = { version = "3.1.9", features = ["derive"] }

async-trait = "0.1.53"

regex = "1.5.5"

[dev-dependencies]
tokio-test = "0.4.2"
